# drug-OD-deaths

./: .dockerignore  .env  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  app_settings.py  compose.yaml  create_database.py  create_tables.sql  gunicorn.conf.py  interpolate_data.py  over-quota-error.html  pyproject.toml  requirements.txt
front-end/: .eslintrc.json  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
front-end/src/: main.js
front-end/src/js/: app-bootstrap.js  app-fetch.js  app-fontawesome.js  app-plotly.js  bootstrap.js  errors.js  form-controls.js  forms.js  plot-controls.js  plot-metadata.js  plots.js  tables.js
front-end/src/scss/: main.scss
od_deaths/: __init__.py  control_options.py  data_interpolation.py  database.py  database_connection.py  database_initialization.py  database_queries.py  date_formatting.py  form_options.py  headings.py  html_headings.py  html_tables.py  interface_labels.py  labels.py  plots.py  processing.py  query_parameters.py  request_parameters.py  tables.py  template_data.py  ui_labels.py
od_deaths/templates/: app.html  cli-mode.html
