[tool.poetry]
name = "od_deaths"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pandas = "^1.5.0"
SQLAlchemy = "^1.4.41"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
