[tool.poetry]
name = "od_deaths"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pandas = "^1.5.0"
SQLAlchemy = "^1.4.41"
plotly = "^5.10.0"
numpy = "^1.23.4"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
jupyterlab = "^3.4.8"
ipython = "^8.5.0"
seaborn = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
